<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">电子名片</string>
    <string name="app_label">电子名片</string>
    <string name="hello_world">Hello NFC!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    
    <string name="tab_card_own">我的名片</string>
    <string name="tab_card_holders">名片夹</string>
    <string name="tab_three">未定</string>

</resources>
