<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_tab_height"
        android:background="@color/default_tab_bg_color"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <RadioButton
            android:id="@+id/radio_one"
            style="@style/TabTitleTheme"
            android:checked="true"
            android:gravity="center"
            android:text="@string/tab_card_own" />

        <RadioButton
            android:id="@+id/radio_two"
            style="@style/TabTitleTheme"
            android:gravity="center"
            android:text="@string/tab_card_holders" />

        <RadioButton
            android:id="@+id/radio_three"
            style="@style/TabTitleTheme"
            android:gravity="center"
            android:text="@string/tab_three" />
    </RadioGroup>

    <com.shz.indicator.UnderlinePageIndicator
        android:id="@+id/indicator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/radiogroup" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/indicator"
        android:layout_gravity="center"
        android:background="@color/gray"
        android:persistentDrawingCache="animation" />

</RelativeLayout>